<resources>
    <string name="pull_to_refresh_pull_label">下拉刷新…</string>
    <string name="pull_to_refresh_push_label">上拉查询更多…</string>
    <string name="pull_to_refresh_release_label">松手刷新…</string>
    <string name="pull_to_refresh_refreshing_label">正在刷新…</string>
    <string name="refresh_completed_label">刷新完成</string>
    <string name="app_name">省省</string>
    <string name="coupon_title">最新折扣</string>
    <string name="coupon_detail">折扣详情</string>
    <string name="merchant_name">英睿信息</string>
    <string name="phone_category_empty">暂无检索结果</string>
    <string name="more">更多…</string>
    <string name="detail_copy_right">此优惠信息由商家提供，商家拥有最终解释权</string>
    <string name="detail_left_days">剩余%d天，</string>
    <string name="detail_duration">%1$s 至 %2$s</string>
    <string name="back_text">返回</string>
    <string name="share_text">分享</string>
    <string name="brand_title">品牌分类</string>
    <string name="rank_title">排名</string>
    <string name="fans_count">粉丝:</string>
    <string name="subbranch_list">商圈分布</string>
    <string name="coupon_rate">好评:</string>
    <string name="telphone_number">电话:</string>
    <string name="address">地址:</string>
    <string name="my_brand">我的品牌</string>
    <string name="my_coupon">品牌动态</string>
    <string name="not_network">无法检测到网络</string>
    <string name="settings_title">设置</string>
    <string name="user_information">个人信息</string>
    <string name="marking">给优优惠打分</string>
    <string name="about">关于省省</string>
    <string name="user_name">姓名</string>
    <string name="mobile_number">手机号码</string>
    <string name="sex">性别</string>
    <string name="birthday">生日</string>
    <string name="completeness">完成度 %d%%</string>
    <string name="remain_text">为了更好的获得优惠信息，请完善您的信息</string>
    <string name="recommend_brand_title">"大家都在订阅这些品牌,
看看有没有你也喜欢的:"</string>
    <string name="finish_title">完成</string>
    <string name="updating">更新中…</string>
    <string name="favorite_title">其他</string>
    <string name="coupon_list">折扣列表</string>
    <string name="brand_detail">品牌详情</string>
    <string name="brand">品牌</string>
    <string name="shopping_mall">商场</string>
    <string name="brand_summarise">品牌概述</string>
    <string name="login_sina">登录新浪微博</string>
    <string name="upgrade">升级</string>
    <string name="switch_user">切换账号</string>
    <string name="share_bind">分享绑定</string>
    <string name="unregister">注销</string>
    <string name="sina_weibo">新浪微博:</string>
    <string name="qq_zone">Q Q 空间:</string>
    <string name="other_info">其他信息</string>
    <string name="city">城市 :</string>
    <string name="city_list_title">城市列表</string>
    <string name="check_update">检查更新</string>
    <string name="evaluation">打分/评价</string>
    <string name="feedback">意见反馈</string>
    <string name="register">登录</string>
    <string name="ok">确定</string>
    <string name="current_city">当前城市：%s</string>
    <string name="attention_coupon">在新浪微博上关注省省</string>
    <string name="push_title">推送</string>
    <string name="contact_title">商务合作请联系</string>
    <string name="contact_qq">QQ:123456789</string>
    <string name="contact_email">Email:service@abc.com</string>
    <string name="company_name">厦门海豹信息技术有限公司 版权所有</string>
    <string name="copyright">Copyright@2012 All Rights Reserved.</string>
    <string name="evaluation_button">撰写评论</string>
    <string name="end_today">当天结束，</string>
    <string name="coupon_images">相册</string>
    <string name="select_text">筛选</string>
    <string name="market_detail">商场详情</string>
    <string name="already_finish">已过期，</string>
    <string name="send_to_weibo">发送</string>
    <string name="city_search_hint">输入城市名或首字母查询</string>
    <string name="current_city_text">当前城市</string>
    <string name="hot_city">热门城市</string>
    <string name="notify_clock">19</string>
    <string name="share_to_message">邀请好友逛街</string>
    <string name="share_to_sina">分享到新浪微博</string>
    <string name="select_all">全部</string>
    <string name="select_male">只看男装</string>
    <string name="select_female">只看女装</string>
    <string name="cancel">取消</string>
    <string name="sharing">正在发布微博</string>
    <string name="share_success">分享成功</string>
    <string name="default_city">上海</string>
    <string name="location_text">正在定位...</string>
    <string name="local_fail">无法定位</string>
    <string name="city_not_in_list">城市暂未开通</string>
    <string name="share_qq_url">http://www.ishengsheng.cn</string>
    <string name="share_qq_source">3</string>
    <string name="repeated_share">重复分享</string>
    <string name="upgrade_sina_text">用新浪微博账号登录</string>
    <string name="upgrade_qq_text">用QQ空间账号登录</string>
    <string name="user_login">账号登录</string>
    <string name="no_coupon_list">没有最新折扣数据</string>
    <string name="no_brand_coupon_list">暂无品牌动态</string>
    <string name="no_brand_list">没有品牌数据</string>
    <string name="no_market_list">暂时没有商场信息</string>
    <string name="no_follow_list">您还未关注任何品牌，来关注一下叭！</string>
    <string name="no_follow_coupon_list">暂无品牌动态</string>
    <string name="no_favorite_list">没有收藏数据</string>
    <string name="no_circle_list">暂无商圈信息</string>
    <string name="no_subbranch_list">没有分店数据</string>
    <string name="default_qq_sex">男</string>
    <string name="qq_auth_error">QQ验证失败</string>
    <string name="follow_success">关注成功</string>
    <string name="follow_fail">关注失败</string>
    <string name="unfollow_success">取消关注成功</string>
    <string name="unfollow_fail">取消关注失败</string>
    <string name="favorite_success">收藏+1</string>
    <string name="unfavorite_success">取消收藏成功</string>
    <string name="praise_success">赞+1</string>
    <string name="praise_unsuccess">赞失败</string>
    <string name="clear_cache">清除缓存</string>
    <string name="clear_notice">是否清除缓存</string>
    <string name="clear">清除</string>
    <string name="can_not_location">无法定位</string>
    <string name="upgrade_error">用户升级失败</string>
    <string name="clear_ok">缓存清理完毕</string>
    <string name="upgrade_success">用户升级成功</string>
    <string name="switch_success">用户切换成功</string>
    <string name="not_new_version">没有新版本需要更新</string>
    <string name="all_subbranch">所有分店</string>
    <string name="cannot_favorite">暂时无法收藏</string>
    <string name="cannot_follow">暂时无法关注</string>
    <string name="open_network">您当前无网络，请检查您的网络设置</string>
    <string name="check_cancel_follow">您真的要取消关注吗？</string>
    <string name="exit_tip">退出提示</string>
    <string name="exit_msg">確定退出省省？</string>
    <string name="request_timeout">请求超时，请稍后再试。</string>
    <string name="connect_exception">网络连接异常，请开启网络。</string>
    <string name="bottom_recommand">推荐</string>
    <string name="bottom_brand">品牌</string>
    <string name="bottom_mine">我的</string>
    <string name="bottom_favorite">其他</string>
    <string name="my_business_area_is_exist">商圈已关注，不能重复关注</string>
    <string name="sina_key">2642155477</string>
    <string name="sina_secret">6f36225e590e37c00fda9e6b923f6242</string>
    <string name="sina_callback">http://www.enways.com/sina_callback.html</string>
    <string name="qq_app_id">100264245</string>
    <string name="qq_key">96046b28239fa43a42cb02a05ffc2781</string>
    <string name="qq_callback">auth://auth.qq.com</string>
    <string name="app_sina_id">2739354230</string>
    <string name="share_to">分享到</string>
    <string name="share_to_qq">分享到QQ空间</string>
    <string name="changecity_error">暂时无法切换城市</string>
    <string name="coupon_detail_partner">参与活动的分店</string>
    <string name="progressdialog_load">请等待...</string>
    <string name="progressdialog_load_text">正在加载数据，请稍后...</string>
    <string name="recommend_app">推荐应用</string>
    <string name="setting_maybelike">您可能喜欢的应用</string>
    <string name="exit_tip_zht">退出提示</string>
    <string name="exit_msg_zht">当真离开省省？</string>
    <string name="ok_zht">吾心已决</string>
    <string name="cancel_zht">真真不舍</string>
    <string name="progressdialog_load_zht">小主~请稍安毋躁</string>
    <string name="local_fail_noopen">城市尚未开通，先去北京转转吧~</string>
    <string name="maps_api_key">c2b0f58a6f09cafd1503c06ef08ac7aeb7ddb91a97e184b5f1e36dad68ed77e64e2a5adf0e0fb70d</string>
    <string name="maps_location_error">定位失败</string>
    <string name="maps_search_error">查找线路失败</string>
    <string name="maps_searching">正在获取线路...</string>
    <string name="coupon_end_today">当天结束</string>
    <string name="coupon_already_finish">已过期</string>
    <string name="brand_subbranch">分店</string>
    <string name="brand_subbranch_title">店铺分布</string>
    <string name="more_city">更多城市,敬请期待...</string>
    <string name="UMEmptyFbNotAllowed">请输入你的反馈内容</string>
    <string name="UMContentTooLong">超过140字了，再简短一些吧</string>
    <string name="UMFbList_ListItem_State_ReSend">失败,轻触以重发</string>
    <string name="UMFbList_ListItem_State_Sending">发送中...</string>
    <string name="UMFbList_ListItem_State_Fail">发送失败</string>
    <string name="UMFb_Atom_State_Sending">发送中...</string>
    <string name="UMFb_Atom_State_Resend">发送失败,轻触以重发</string>
    <string name="UMFeedbackUmengTitle">反馈意见</string>
    <string name="UMFeedbackListTitle">我的反馈</string>
    <string name="UMFeedbackConversationTitle">反馈问题</string>
    <string name="UMFeedbackTitle">每条建议都将帮助我们做得更好。</string>
    <string name="UMFeedbackContent">请输入您的反馈意见</string>
    <string name="UMFeedbackSummit">提交</string>
    <string name="UMViewThread">查看反馈</string>
    <string name="UMNewReplyAlertTitle">您的反馈收到了回复</string>
    <string name="UMDeleteThread">删除反馈</string>
    <string name="UMViewFeedback">查看反馈</string>
    <string name="UMDeleteFeedback">删除反馈</string>
    <string name="UMResendFeedback">重发反馈</string>
    <string name="UMDeleteMsg">删除信息</string>
    <string name="UMNewReplyFlick">有新的回复</string>
    <string name="UMNewReplyTitle">有新的回复</string>
    <string name="UMNewReplyHint">点击查看</string>
    <string name="UMBreak_Network">未联网</string>
    <string name="UMUpdateTitle">应用程序有新版本更新</string>
    <string name="UMNewVersion">最新版本:</string>
    <string name="UMGprsCondition">（提示：非WIFI环境）</string>
    <string name="UMUpdateNow">立即更新</string>
    <string name="UMAppUpdate">应用更新</string>
    <string name="UMUpdatingNow">正在更新应用程序...</string>
    <string name="UMNotNow">以后再说</string>
    <string name="UMToast_IsUpdating">正在更新中....</string>
    <string name="UMDialog_InstallAPK">最新版本已下载，是否安装？</string>
    <string name="umeng_share_shareto_top">选择分享方式</string>
    <string name="umeng_share_shareto_renr">人人网</string>
    <string name="umeng_share_shareto_sina">新浪微博</string>
    <string name="umeng_share_shareto_tenc">腾讯微博</string>
    <string name="umeng_share_update_edittext_hint">说点什么...</string>
    <string name="umeng_share_update_send">发布</string>
    <string name="umeng_share_update_imgLoadFailed">抱歉，图片文件加载失败！</string>
    <string name="umeng_share_update_contentEmpty">抱歉，分享内容不能为空！</string>
    <string name="umeng_share_update_uneditTopic">抱歉，尚未编辑话题！</string>
    <string name="umeng_share_update_updated">发布成功！</string>
    <string name="umeng_share_update_repeated">抱歉，重复发布！</string>
    <string name="umeng_share_update_fileToLarge">抱歉，图片大小超过限制！</string>
    <string name="umeng_share_update_fileNotExist">抱歉，文件不存在！</string>
    <string name="umeng_share_update_msgLengthExtendsLimit">抱歉，字数超过限制！</string>
    <string name="umeng_share_update_networkUnavailable">抱歉，网络原因请稍后再试！</string>
    <string name="umeng_share_update_extendsSendLimit">抱歉，已超过一小时内的最大发送限制，请稍后重试！</string>
    <string name="umeng_share_update_uidNotExist">尚未绑定账号或有效期已过，请重新绑定</string>
    <string name="umeng_share_update_appBlocked">抱歉，该分享功能已被停用！</string>
    <string name="umeng_share_oauth_linkserver">正在加载授权页面，请稍等...</string>
    <string name="umeng_share_snsservice_linkServer">正在连接服务器，请稍等</string>
    <string name="umeng_share_snsservice_oauthSuccessed">授权成功！</string>
    <string name="umeng_share_snsservice_oauthFailed">抱歉，授权失败！</string>
    <string name="umeng_share_snsservice_noNetwork">抱歉，无网络服务！</string>
    <string name="umeng_share_renr">open</string>
    <string name="umeng_share_sina">open</string>
    <string name="umeng_share_tenc">open</string>
</resources>