<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout android:background="@drawable/layout_bg" android:layout_width="fill_parent" android:layout_height="fill_parent"
  xmlns:android="http://schemas.android.com/apk/res/android">
    <include android:id="@+id/header_title" layout="@layout/header_layout" />
    <ScrollView android:id="@+id/scroll_view" android:scrollbars="none" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_below="@+id/header_title">
        <RelativeLayout android:orientation="vertical" android:id="@+id/user_info_layout" android:layout_width="fill_parent" android:layout_height="fill_parent">
            <TextView android:textColor="@color/red" android:id="@+id/user_information_text" android:paddingLeft="10.0dip" android:paddingBottom="5.0dip" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginLeft="10.0dip" android:layout_marginTop="10.0dip" android:text="@string/user_information" android:layout_alignRight="@+id/share_bind_text" android:layout_alignParentLeft="true" android:layout_alignParentTop="true" />
            <RelativeLayout android:id="@+id/user_information_layout" android:background="@drawable/one_item_list_bg" android:layout_width="wrap_content" android:layout_height="45.0dip" android:layout_marginLeft="10.0dip" android:layout_marginRight="10.0dip" android:layout_below="@+id/user_information_text" android:layout_alignLeft="@+id/user_information_text" android:layout_alignParentLeft="true" android:layout_alignParentRight="true">
                <TextView android:textSize="20.0dip" android:ellipsize="end" android:id="@+id/user_information" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginLeft="20.0dip" android:layout_marginRight="5.0dip" android:text="" android:singleLine="true" android:layout_toLeftOf="@+id/upgrade_button" android:layout_alignParentLeft="true" android:layout_centerVertical="true" />
                <Button android:textSize="16.0dip" android:textStyle="bold" android:textColor="@android:color/white" android:id="@+id/upgrade_button" android:background="@drawable/normal_button_bg" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginRight="18.0dip" android:text="@string/upgrade" android:layout_alignParentRight="true" android:layout_centerVertical="true" android:onClick="changeAccount" />
            </RelativeLayout>
            <TextView android:textColor="@color/red" android:id="@+id/share_bind_text" android:paddingLeft="10.0dip" android:paddingBottom="5.0dip" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginLeft="10.0dip" android:layout_marginTop="5.0dip" android:text="@string/share_bind" android:layout_below="@+id/user_information_layout" android:layout_alignParentLeft="true" />
            <RelativeLayout android:orientation="vertical" android:id="@+id/RelativeLayout1" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginLeft="10.0dip" android:layout_marginRight="10.0dip" android:layout_below="@+id/share_bind_text" android:layout_alignParentLeft="true" android:layout_alignParentRight="true">
                <RelativeLayout android:id="@+id/relativeLayout2" android:background="@drawable/list_item_top_bg" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_alignParentLeft="true" android:layout_alignParentTop="true">
                    <ImageView android:id="@+id/weibo_image" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginLeft="20.0dip" android:src="@drawable/ic_sina" android:layout_alignParentLeft="true" android:layout_centerVertical="true" />
                    <TextView android:textColor="@android:color/black" android:id="@+id/sina_weibo" android:paddingLeft="10.0dip" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/sina_weibo" android:layout_toRightOf="@+id/weibo_image" android:layout_centerVertical="true" />
                    <Button android:textSize="16.0dip" android:textStyle="bold" android:textColor="@android:color/white" android:id="@+id/sina_register" android:background="@drawable/normal_button_bg" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginRight="20.0dip" android:text="@string/register" android:layout_alignParentRight="true" android:layout_centerVertical="true" android:onClick="sinaRegister" />
                    <TextView android:id="@+id/sina_user_name" android:paddingLeft="5.0dip" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="" android:layout_toRightOf="@+id/sina_weibo" android:layout_centerVertical="true" />
                </RelativeLayout>
                <RelativeLayout android:id="@+id/relativeLayout3" android:background="@drawable/list_item_bottom_bg" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_below="@+id/relativeLayout2" android:layout_alignParentLeft="true">
                    <ImageView android:id="@+id/qq_image" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginLeft="20.0dip" android:src="@drawable/ic_qq" android:layout_alignParentLeft="true" android:layout_centerVertical="true" />
                    <TextView android:textColor="@android:color/black" android:id="@+id/qq_zone" android:paddingLeft="10.0dip" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/qq_zone" android:layout_toRightOf="@+id/qq_image" android:layout_centerVertical="true" />
                    <Button android:textSize="16.0dip" android:textStyle="bold" android:textColor="@android:color/white" android:id="@+id/qq_register" android:background="@drawable/normal_button_bg" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginRight="20.0dip" android:text="@string/register" android:layout_alignParentRight="true" android:layout_centerVertical="true" android:onClick="qqRegister" />
                    <TextView android:id="@+id/qq_user_name" android:paddingLeft="5.0dip" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="" android:layout_toRightOf="@+id/qq_zone" android:layout_centerVertical="true" />
                </RelativeLayout>
                <RelativeLayout android:id="@+id/RelativeLayout01" android:background="@drawable/list_item_bottom_bg" android:visibility="gone" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_below="@+id/relativeLayout3" android:layout_alignParentLeft="true" android:onClick="followApp">
                    <TextView android:textColor="@android:color/black" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginLeft="20.0dip" android:text="@string/attention_coupon" android:layout_alignParentLeft="true" android:layout_centerVertical="true" />
                    <ImageView android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginRight="20.0dip" android:src="@drawable/jiantou_icon" android:layout_alignParentRight="true" android:layout_centerVertical="true" />
                </RelativeLayout>
            </RelativeLayout>
            <TextView android:textColor="@color/red" android:id="@+id/other_information_text" android:paddingLeft="10.0dip" android:paddingBottom="5.0dip" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginLeft="10.0dip" android:layout_marginTop="5.0dip" android:text="@string/other_info" android:layout_below="@+id/RelativeLayout1" android:layout_alignParentLeft="true" />
            <RelativeLayout android:orientation="vertical" android:id="@+id/RelativeLayout10" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginLeft="10.0dip" android:layout_marginRight="10.0dip" android:layout_below="@+id/other_information_text" android:layout_alignParentLeft="true" android:layout_alignParentRight="true">
                <RelativeLayout android:id="@+id/relativeLayout4" android:background="@drawable/list_item_top_bg" android:layout_width="fill_parent" android:layout_height="wrap_content">
                    <TextView android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginLeft="20.0dip" android:text="@string/push_title" android:layout_alignParentLeft="true" android:layout_centerVertical="true" />
                    <CheckBox android:textColor="@color/white" android:id="@+id/push_button" android:background="@drawable/check_yes_no_bg" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginRight="20.0dip" android:button="@null" android:text="" android:layout_alignParentRight="true" android:layout_centerVertical="true" />
                </RelativeLayout>
                <RelativeLayout android:id="@+id/relativeLayout11" android:background="@drawable/list_item_middle_bg" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_below="@+id/relativeLayout4" android:onClick="clearCache">
                    <TextView android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginLeft="20.0dip" android:text="@string/clear_cache" android:layout_alignParentLeft="true" android:layout_centerVertical="true" />
                    <Button android:textSize="16.0dip" android:textStyle="bold" android:textColor="@android:color/white" android:id="@+id/clear_cache_button" android:background="@drawable/normal_button_bg" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginRight="20.0dip" android:text="@string/clear" android:layout_alignParentRight="true" android:layout_centerVertical="true" android:onClick="clearCache" />
                </RelativeLayout>
                <RelativeLayout android:id="@+id/relativeLayout5" android:background="@drawable/list_item_middle_bg" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_below="@+id/relativeLayout11" android:onClick="checkUpdate">
                    <TextView android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginLeft="20.0dip" android:text="@string/check_update" android:layout_alignParentLeft="true" android:layout_centerVertical="true" />
                    <ImageView android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginRight="20.0dip" android:src="@drawable/jiantou_icon" android:layout_alignParentRight="true" android:layout_centerVertical="true" />
                </RelativeLayout>
                <RelativeLayout android:id="@+id/relativeLayout6" android:background="@drawable/list_item_middle_bg" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_below="@+id/relativeLayout5" android:onClick="feedback">
                    <TextView android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginLeft="20.0dip" android:text="@string/feedback" android:layout_alignParentLeft="true" android:layout_centerVertical="true" />
                    <ImageView android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginRight="20.0dip" android:src="@drawable/jiantou_icon" android:layout_alignParentRight="true" android:layout_centerVertical="true" />
                </RelativeLayout>
                <RelativeLayout android:id="@+id/relativeLayout7" android:background="@drawable/list_item_middle_bg" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_below="@+id/relativeLayout6" android:onClick="maybelike">
                    <TextView android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginLeft="20.0dip" android:text="@string/setting_maybelike" android:layout_alignParentLeft="true" android:layout_centerVertical="true" />
                    <ImageView android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginRight="20.0dip" android:src="@drawable/jiantou_icon" android:layout_alignParentRight="true" android:layout_centerVertical="true" />
                </RelativeLayout>
                <RelativeLayout android:background="@drawable/list_item_bottom_bg" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_below="@+id/relativeLayout7" android:onClick="aboutClick">
                    <TextView android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginLeft="20.0dip" android:text="@string/about" android:layout_alignParentLeft="true" android:layout_centerVertical="true" />
                    <ImageView android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginRight="20.0dip" android:src="@drawable/jiantou_icon" android:layout_alignParentRight="true" android:layout_centerVertical="true" />
                </RelativeLayout>
            </RelativeLayout>
            <LinearLayout android:orientation="vertical" android:layout_width="fill_parent" android:layout_height="10.0dip" android:layout_below="@+id/RelativeLayout10" android:layout_alignParentLeft="true" />
        </RelativeLayout>
    </ScrollView>
</RelativeLayout>
