<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@drawable/layout_bg" >

    <include
        android:id="@+id/header"
        layout="@layout/header_layout" />

    <RelativeLayout
        android:id="@+id/RelativeLayout1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/header"
        android:layout_centerHorizontal="true"
        android:background="@drawable/city_search_bg"
        android:orientation="vertical"
        android:visibility="gone" >

        <AutoCompleteTextView
            android:id="@+id/search_city"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_centerVertical="true"
            android:background="@drawable/city_search_edit_bg"
            android:completionThreshold="1"
            android:ems="10"
            android:hint="@string/city_search_hint"
            android:maxLines="1"
            android:paddingLeft="30.0dip"
            android:singleLine="true"
            android:textSize="15.0dip" />
    </RelativeLayout>

    <TextView
        android:id="@+id/gps_text_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/RelativeLayout1"
        android:layout_marginLeft="20.0dip"
        android:layout_marginTop="10.0dip"
        android:text="@string/current_city_text"
        android:textColor="@color/red"
        android:textSize="15.0dip" />

    <TextView
        android:id="@+id/current_city"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/gps_text_view"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="5.0dip"
        android:background="@drawable/one_item_list_bg"
        android:gravity="center_vertical"
        android:paddingLeft="10.0dip"
        android:text=""
        android:textColor="@color/black" />

    <TextView
        android:id="@+id/hot_city_text_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/gps_text_view"
        android:layout_below="@+id/current_city"
        android:layout_marginTop="15.0dip"
        android:text="@string/hot_city"
        android:textColor="@color/red"
        android:textSize="15.0dip" />

    <ListView
        android:id="@+id/city_list_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_below="@+id/hot_city_text_view"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="10.0dip"
        android:layout_marginTop="10.0dip" />

</RelativeLayout>